# sycl-demo-atomic-scan

./: CMakeLists.txt  Makefile  README.md  atomic_scan.cpp
src/: CMakeLists.txt  atomic_scan.cpp
